# paste

./: Cargo.toml  paste.toml
src/: cfg.rs  cli.rs  env.rs  err.rs  main.rs
