[package]
name = "paste"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
authors = ["Zakhary Kaplan <me@zakhary.dev>"]
repository = "https://github.com/kaplanz/paste"
license = "MIT OR Apache-2.0"

[dependencies]
advise = "0.1.0"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["cargo", "derive", "env", "wrap_help"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sysexits = "0.9.0"
thiserror = "2.0.12"
toml = "0.8.20"
xdir = "0.1.0"

[features]
default = []
